POY-83 fix contact form validation overflow

--- a/client/src/app/components/contact-form/contact-form.component.styl
+++ b/client/src/app/components/contact-form/contact-form.component.styl
@@ -73,3 +73,9 @@
   color: warningColor
   line-height: 15px
 }
+
+.inputWrapper {
+  display: flex
+  flex-direction: column
+  flex: 1
+}
