--- a/client/src/app/components/profile-panel/profile-panel.component.styl
+++ b/client/src/app/components/profile-panel/profile-panel.component.styl
@@ -20,7 +20,7 @@
     border: 1px solid colorOfDecorations
     cursor: pointer
     font-weight: 700
-    background-color: backgroundColor1
+    background-color: backgroundColor2
   }
 
   &__list {
@@ -29,7 +29,7 @@
     right: 0
     z-index: 80
 
-    background-color: shadow2
+    background-color: backgroundColor2
 
     &:before, &:after {
       position: absolute
@@ -94,7 +94,7 @@
       margin-top: 5px
       padding-top: 2px
 
-      border-top: 1px solid backgroundColor1 
+      border-top: 1px solid shadow1 
     }
   }
 }
